--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "resume",
   "version": "0.1.0",
   "engines": {
-    "node": "16.x"
+	  "node": "v16.15.0",
+  	"npm": "8.5.5"
   },
   "private": true,
   "dependencies": {
