--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "resume-builder",
-  "description":"React app  taht helps you you to create your resume",
+  "description": "React app  taht helps you you to create your resume",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -20,6 +20,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
+    "uniqid": "^5.4.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
